Closed
Bug 378824
Opened 17 years ago
Closed 17 years ago
regression for index() on branches
Categories
(Core Graveyard :: XForms, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: aaronr, Assigned: aaronr)
Details
(Keywords: fixed1.8.0.12, fixed1.8.1.4)
Attachments
(2 files, 1 obsolete file)
1.21 KB,
application/xhtml+xml
|
Details | |
5.89 KB,
patch
|
smaug
:
review+
sicking
:
review+
dveditz
:
approval1.8.1.4+
dveditz
:
approval1.8.0.12+
|
Details | Diff | Splinter Review |
The patch for bug 361501 regressed index() on the 1.8 and 1.8.0 branches. When index() can't find a repeat it is supposed to return NaN. Which the new xpath worker function triggers by returning -1. However, the new worker function returns a PRUint32 and not a PRInt32 so the value doesn't look like it is < 0 so we return 0xffffffff instead of NaN. I can't believe that I missed that when I reviewed. Ugh!
Attachment #262829 -
Attachment mime type: text/html → application/xhtml+xml
Attachment #262829 -
Attachment is obsolete: true
Attachment #262831 -
Flags: review?(Olli.Pettay)
Comment on attachment 262831 [details] [diff] [review] patch for 1.8 and 1.8.0 I fixed this by just switching the PRUint32 to a PRInt32 like it used to be. Sorry again for missing that on review. Asking olli to review for xforms, jonas for transformiix so that we can get approval for branch checkin.
Attachment #262831 -
Attachment description: patch → patch for 1.8 and 1.8.0
Attachment #262831 -
Flags: review?(jonas)
Attachment #262831 -
Flags: review?(jonas) → review+
Updated•17 years ago
|
Attachment #262831 -
Flags: review?(Olli.Pettay) → review+
Comment on attachment 262831 [details] [diff] [review] patch for 1.8 and 1.8.0 this will correct a regression caused by a function's signature change mistakenly made in the branch checkin I did for bug 361501. Affects only the xforms processor since this is an internal interface only used by xforms
Attachment #262831 -
Flags: approval1.8.1.4?
Attachment #262831 -
Flags: approval1.8.0.12?
Comment 5•17 years ago
|
||
Comment on attachment 262831 [details] [diff] [review] patch for 1.8 and 1.8.0 approved for 1.8.0.12 and 1.8.1.4, a=dveditz for release-drivers
Attachment #262831 -
Flags: approval1.8.1.4?
Attachment #262831 -
Flags: approval1.8.1.4+
Attachment #262831 -
Flags: approval1.8.0.12?
Attachment #262831 -
Flags: approval1.8.0.12+
checked into 1.8 and 1.8.0 branches
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: fixed1.8.0.12,
fixed1.8.1.4
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•