[NPOTDB] regression for index on branches. Bug 378824, r=olli+sicking, a=dveditz