mozilla/extensions/transformiix/source/xpath/nsIXFormsUtilityService.h
@@ -66,7 +66,7 @@ class nsIXFormsModelElement; /* forward declaration */
   NS_IMETHOD IsNodeAssocWithModel(nsIDOMNode *aNode, nsIDOMNode *aModel, PRBool *_retval); \
   NS_IMETHOD GetInstanceDocumentRoot(const nsAString & aID, nsIDOMNode *aModelNode, nsIDOMNode **_retval); \
   NS_IMETHOD ValidateString(const nsAString & aValue, const nsAString & aType, const nsAString & aNamespace, PRBool *_retval); \
-  NS_IMETHOD GetRepeatIndexById(nsIDOMNode *aResolverNode, const nsAString &aId, PRUint32 *aIndex); \
+  NS_IMETHOD GetRepeatIndexById(nsIDOMNode *aResolverNode, const nsAString &aId, PRInt32 *aIndex); \
   NS_IMETHOD GetMonths(const nsAString & aValue, PRInt32 *aMonths); \
   NS_IMETHOD GetSeconds(const nsAString & aValue, double *aSeconds); \
   NS_IMETHOD GetSecondsFromDateTime(const nsAString & aValue, double *aSeconds); \
@@ -125,7 +125,7 @@ class NS_NO_VTABLE nsIXFormsUtilityService : public nsISupports {
    * Function to retrieve the index from the repeat element with the given id.
    */
   /* unsigned long getRepeatIndexById (in nsIDOMNode aResolverNode, in AString aRepeat); */
-  NS_IMETHOD GetRepeatIndexById(nsIDOMNode *aResolverNode, const nsAString &aId, PRUint32 *aIndex) = 0;
+  NS_IMETHOD GetRepeatIndexById(nsIDOMNode *aResolverNode, const nsAString &aId, PRInt32 *aIndex) = 0;
 
   /**
    * Function to retrieve the number of months represented by the 
